--- a/src/View/MainView.form
+++ b/src/View/MainView.form
@@ -386,10 +386,10 @@
                       <Component id="tpHoraFin" min="-2" max="-2" attributes="0"/>
                       <EmptySpace min="-2" pref="16" max="-2" attributes="0"/>
                       <Component id="separador" min="-2" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="44" max="-2" attributes="0"/>
+                      <EmptySpace pref="44" max="32767" attributes="0"/>
                       <Component id="btBuscar" min="-2" pref="26" max="-2" attributes="0"/>
                       <EmptySpace type="separate" max="-2" attributes="0"/>
-                      <Component id="jPanel1" pref="76" max="32767" attributes="0"/>
+                      <Component id="jPanel1" min="-2" pref="76" max="-2" attributes="0"/>
                   </Group>
               </Group>
             </DimensionLayout>
@@ -529,33 +529,27 @@
               <Layout>
                 <DimensionLayout dim="0">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Component id="lbLogo" alignment="0" max="32767" attributes="0"/>
+                      <EmptySpace min="0" pref="200" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
                 <DimensionLayout dim="1">
                   <Group type="103" groupAlignment="0" attributes="0">
-                      <Group type="102" alignment="0" attributes="0">
-                          <Component id="lbLogo" pref="0" max="32767" attributes="0"/>
-                          <EmptySpace max="-2" attributes="0"/>
-                      </Group>
+                      <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
                   </Group>
                 </DimensionLayout>
               </Layout>
-              <SubComponents>
-                <Component class="javax.swing.JLabel" name="lbLogo">
-                  <Properties>
-                    <Property name="horizontalAlignment" type="int" value="0"/>
-                    <Property name="text" type="java.lang.String" value="Logo 40px"/>
-                    <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
-                      <Dimension value="[80, 80]"/>
-                    </Property>
-                  </Properties>
-                </Component>
-              </SubComponents>
             </Container>
             <Component class="com.github.lgooddatepicker.components.TimePicker" name="tpHoraInicio">
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new com.github.lgooddatepicker.components.TimePicker(timeSettings)"/>
+                <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="TimePickerSettings timeSettings;&#xa;timeSettings = new TimePickerSettings();&#xa;timeSettings.setAllowEmptyTimes(false);&#xa;timeSettings.setDisplaySpinnerButtons(true);&#xa;timeSettings.generatePotentialMenuTimes(TimeIncrement.OneHour, LocalTime.of(7, 00), LocalTime.of(20, 00));"/>
+              </AuxValues>
             </Component>
             <Component class="com.github.lgooddatepicker.components.TimePicker" name="tpHoraFin">
+              <AuxValues>
+                <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new com.github.lgooddatepicker.components.TimePicker(timeSettings2)"/>
+                <AuxValue name="JavaCodeGenerator_CreateCodePre" type="java.lang.String" value="TimePickerSettings timeSettings2;&#xa;timeSettings2 = new TimePickerSettings();&#xa;timeSettings2.setAllowEmptyTimes(false);&#xa;timeSettings2.setDisplaySpinnerButtons(true);&#xa;timeSettings2.generatePotentialMenuTimes(TimeIncrement.OneHour, LocalTime.of(8, 00), LocalTime.of(21, 00));"/>
+              </AuxValues>
             </Component>
           </SubComponents>
         </Container>
@@ -632,7 +626,9 @@
                   <Color blue="f5" green="f5" red="f5" type="rgb"/>
                 </Property>
                 <Property name="name" type="java.lang.String" value="" noResource="true"/>
-                <Property name="rowHeight" type="int" value="20"/>
+                <Property name="rowHeight" type="int" editor="org.netbeans.modules.form.RADConnectionPropertyEditor">
+                  <Connection code="40" type="code"/>
+                </Property>
                 <Property name="selectionBackground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
                   <Color blue="fb" green="de" red="bb" type="rgb"/>
                 </Property>
